--- a/src/index.jade
+++ b/src/index.jade
@@ -2,5 +2,29 @@
 html(lang="en")
   include template/header.jade
   body
+    header.header
+      .position
+        .header-top.clearfix
+          .phone.left
+            span 8 800 500 50 50
+          .logo.left
+            a(href="#")
+              img(src="img/logo.png", alt="Miami Condo Rings")
+          .call-order.left
+            a(href="#") Call to order
+        .header-bottom
+          ul.menu
+            li
+              a(href="#") Home
+            li
+              a(href="#") About Us
+            li
+              a(href="#") Gallery
+            li
+              a(href="#") Consulation
+            li
+              a(href="#") Testimonials
+            li
+              a(href="#") Contacts
 
 
