--- a/src/index.jade
+++ b/src/index.jade
@@ -26,5 +26,33 @@ html(lang="en")
               a(href="#") Testimonials
             li
               a(href="#") Contacts
-
+    .about
+      .position.clearfix
+        .title.left
+          h1
+            | Miami
+            strong  best
+            |  Realry
+            span  — this
+        .article
+          h4 Over 50 years experience in love.
+          p
+            | Mazel and VA Tsukkerman in his "Analysis of musical works."
+            | Pointillism, which originated in the music of the early twentieth century, microforms,
+            | found a distant historical.
+          p.list 1.  The market leader in real estate since 2003<br>
+            |2.  Awards Real Estate Company, 2010, 2011, 2013<br>
+            |3.  More than 200 satisfied customers premium segment<br>
+            |4.  We focus only on new buildings and high-level doskanalno know this area better than other specialists.<br>
+            |5.  Working directly with developers - so have more useful information about the profitable deals
+          p
+            strong We will never late! <br>Guaranteed secure transaction - 100%
+    .gallery
+      .position
+        h1 Gallery
+        .row-gallery.pad
+          img(src="img/photo1.jpg", alt="photo1", class="photo1")
+          img(src="img/photo2.jpg", alt="photo2", class="photo2")
+        .title Marina Palms /
+          span North Miami Beach, FL 33162
 
