Create section reviews

--- a/src/index.jade
+++ b/src/index.jade
@@ -49,8 +49,9 @@ html(lang="en")
             strong We will never late! <br>Guaranteed secure transaction - 100%
     .gallery
       .position
-        h1 Gallery
-        .row-gallery.pad
+        .center
+          h1.title-h1 Gallery
+        .row-gallery
           .box-row
             .box-wrap
               .box
@@ -82,7 +83,8 @@ html(lang="en")
           a.btn-view(href="#") View all
     .consultation
       .position
-        h1 Consultation
+        .center
+          h1.title-h1 Consultation
         .wrap-form.clearfix
           .description
             h2
@@ -97,4 +99,27 @@ html(lang="en")
             input(type="tel" placeholder="phone", name="phone" required)
             input(type="email" placeholder="email", required)
             button(type="submit") Consultation
+    .testimonials
+      .position
+        .center
+          h1.title-h1 Testimonials
+        .reviews.clearfix
+          .review-box
+            img(src="img/photo-review1.png", alt="Stev Joni")
+            h4 Stev Joni
+            span Founder Lucoil
+            p Nice work, Certificates National Association of Realtors (USA).
+          .review-box-center
+            img(src="img/photo-review2.png", alt="Alisher Usmanov")
+            h4 Alisher Usmanov
+            span Ural Steel
+            p My soul is illuminated by an unearthly joy, as these beautiful spring morning, which I enjoy with all my heart.
+              br
+              | I'm all alone and blissfully happy in the local edge.
+              | as if created for the likes of me.
+          .review-box
+            img(src="img/photo-review3.png", alt="Алексей Мордашов")
+            h4 Алексей Мордашов
+            span ГазПром
+            p When my lovely valley of steam rises and half-day sun is above an impermeable. thicket
 
