--- a/src/index.jade
+++ b/src/index.jade
@@ -94,7 +94,7 @@ html(lang="en")
             p The procedural change mezzo forte starts izoritmichesky pickup at these moments stop LA Mazel and
               | VA Tsukkerman in his "Analysis of musical works." Pointillism, which originated in the music of
               |the early twentieth century, microforms, found a distant historical
-          form.form-consul(action="#", method="post")
+          form.form(action="#", method="post")
             input(type="text" placeholder="name", name="name" required)
             input(type="tel" placeholder="phone", name="phone" required)
             input(type="email" placeholder="email", required)
@@ -122,4 +122,32 @@ html(lang="en")
             h4 Алексей Мордашов
             span ГазПром
             p When my lovely valley of steam rises and half-day sun is above an impermeable. thicket
+    .contact
+      .position
+        .center
+          h1.title-h1 Contact
+        .wrap-form.clearfix
+          .description
+            p.address Hello@miami.com
+            p.address
+              | 8 800 678 78 78
+              br
+              | 8 800 700 98 98
+            p.address
+              | 400 first ave. n.
+              br
+              | suite 700
+              br
+              | Minneapolis, MN 55401
+          form.form(action="#", method="post")
+            input(type="text" placeholder="name", name="name" required)
+            input(type="email" placeholder="email", required)
+            textarea(name="", cols="30", rows="10")
+            button(type="submit") Write to us
+    footer.footer
+      .logo
+        a(href="#")
+          img(src="img/logo-footer.png", alt="Miami Condo Rings")
+      .copyright
+        p &copy; 2013 Miami.
 
