--- a/src/style/partials/common.scss
+++ b/src/style/partials/common.scss
@@ -162,7 +162,7 @@ header.header {
   }
 }
 
-.form-consul {
+.form {
   input {
     width: 85%;
     height: 52px;
@@ -173,8 +173,7 @@ header.header {
     font-size: 14px;
     font-weight: 500;
     text-align: center;
-    text-transform: uppercase;
-    padding: 0 3em;
+    padding: 0 2em;
 
     &:focus {
       border: 2px solid #7c7c7c;
@@ -182,6 +181,18 @@ header.header {
   }
     @include placeholder {
         color: $content-text-color;
+        text-transform: uppercase;
+    }
+
+    textarea {
+      resize: none;
+      border: 0;
+      width: 85%;
+      background-color: $bg-input;
+      padding: 0.5em 2em;
+      font-size: 14px;
+      font-weight: 500;
+      margin-bottom: 5px;
     }
     button {
       width: 85%;
@@ -208,5 +219,19 @@ header.header {
   span {
     font-style: italic;
     color: #696973;
+  }
+}
+
+.address {
+  font-size: 1.5em;
+  line-height: 1.25em;
+}
+
+.footer {
+  background: url(../img/footer-bg.jpg) 50% 0 no-repeat #080d35;
+  background-size: cover;
+  p {
+    font-weight: 500;
+    color: white;
   }
 }
