--- a/src/template/header.jade
+++ b/src/template/header.jade
@@ -1,5 +1,24 @@
-head
-  meta(charset="UTF-8")
-  title Document
-  link(rel="stylesheet", href="css/main.css")
-  link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic')
+header.header
+  .position
+    .header-top.clearfix
+      .phone.left
+        span 8 800 500 50 50
+      .logo.left
+        a(href="#")
+          img(src="img/logo.png", alt="Miami Condo Rings")
+      .call-order.left
+        a.call(href="#form-send") Call to order
+    .header-bottom
+      ul.menu.fixed
+        li
+          a(href="#home") Home
+        li
+          a(href="#about") About Us
+        li
+          a(href="#gallery") Gallery
+        li
+          a(href="#consultation") Consulation
+        li
+          a(href="#testimonials") Testimonials
+        li
+          a(href="#contact") Contacts
