Create mobile version

--- a/src/index.jade
+++ b/src/index.jade
@@ -9,12 +9,7 @@ html(lang="en")
     include template/testimonials.jade
     include template/contact.jade
     include template/footer.jade
-    .hidden
-        form#form-send.white-popup-block.mfp-hide(action="#", method="post")
-          input(type="text" placeholder="name", name="name" required)
-          input(type="tel" placeholder="phone", name="phone" required)
-          input(type="email" placeholder="email", required)
-          button.btn(type="submit") send request
+    .arrow#toTop
     script(src='js/main.js')
 
 
