--- a/src/style/partials/base.scss
+++ b/src/style/partials/base.scss
@@ -13,6 +13,12 @@ Magnific-popap
   box-sizing: border-box;
 }
 
+.render-text {
+   text-shadow:-1px -1px 1px rgba(255,255,255,0.2), /* наверх и влево */
+   1px 1px 1px rgba(255,255,255,0.2), /* вниз и вправо */
+   1px 1px 1px rgba(0,0,0,0.7); /* тёмная тень */
+}
+
 .left {
   float: left;
 }
