--- a/src/style/partials/common.scss
+++ b/src/style/partials/common.scss
@@ -273,9 +273,21 @@ header.header {
   }
 }
 
-// *************   Popap form   ************* //
 
-.hidden {
+// *************   Arrow   ************* //
+
+
+
+.arrow {
+  width: 0;
+  height: 0;
+  border-left: 25px solid transparent;
+  border-right: 25px solid transparent;
+  border-bottom: 30px solid #0098d5;
+  position: fixed;
+  bottom:10px;
+  right:20px;
+  cursor: pointer;
   display: none;
 }
 
