--- a/src/template/head.jade
+++ b/src/template/head.jade
@@ -1,5 +1,6 @@
 head
   meta(charset="UTF-8")
   title Miami by Bulat Abyanov
+  meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no')
   link(rel="stylesheet", href='css/main.css')
   link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic')
